--- a/src/Baballonia.Desktop/Baballonia.Desktop.csproj
+++ b/src/Baballonia.Desktop/Baballonia.Desktop.csproj
@@ -6,6 +6,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
         <RootNamespace>AvaloniaMiaDev.Desktop</RootNamespace>
+        <ApplicationIcon>Assets\IconOpaque_32x32.ico</ApplicationIcon>
     </PropertyGroup>
 
     <PropertyGroup>
