feat(QOL) See desc, QA patches
- Refactor DeviceEnumerator to handle duplicate serial port entries
- Update NSIS script to exclude non-windows ONNX runtimes, non-windows SteamVR overlay
- Add logic to display friendly device names
- AutoCompleteBox displays all on enter, rather than having to enter a character first
- Indent LocalSettings.json

--- a/src/Baballonia/Baballonia.csproj
+++ b/src/Baballonia/Baballonia.csproj
@@ -88,6 +88,7 @@
         <PackageReference Include="SkiaSharp" Version="2.88.9" />
         <PackageReference Include="SoundFlow" Version="1.0.3" />
         <PackageReference Include="System.IO.Ports" Version="9.0.2" />
+        <PackageReference Include="System.Management" Version="9.0.4" />
     </ItemGroup>
 
 
