--- a/src/Baballonia/LocalSettings.json
+++ b/src/Baballonia/LocalSettings.json
@@ -1,1 +1,160 @@
-﻿{"CalibrationEnabled":"false","CalibrationWeight":"0.2","ContinuousCalibrationEnabled":"true","Mutations":"{\"ShapeMutations\":[{\"Name\":\"EyeSquintRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"EyeSquintLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"EyeWideRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"EyeWideLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"BrowPinchRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"BrowPinchLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"BrowLowererRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"BrowLowererLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"BrowInnerUpRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"BrowInnerUpLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"BrowOuterUpRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"BrowOuterUpLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"NasalDilationRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"NasalDilationLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"NasalConstrictRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"NasalConstrictLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"CheekSquintRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"CheekSquintLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"CheekPuffRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"CheekPuffLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"CheekSuckRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"CheekSuckLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"JawOpen\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"JawRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"JawLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"JawForward\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"JawBackward\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"JawClench\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"JawMandibleRaise\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"MouthClosed\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"LipSuckUpperRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"LipSuckUpperLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"LipSuckLowerRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"LipSuckLowerLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"LipSuckCornerRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"LipSuckCornerLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"LipFunnelUpperRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"LipFunnelUpperLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"LipFunnelLowerRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"LipFunnelLowerLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"LipPuckerUpperRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"LipPuckerUpperLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"LipPuckerLowerRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"LipPuckerLowerLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"MouthUpperUpRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"MouthUpperUpLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"MouthUpperDeepenRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"MouthUpperDeepenLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"NoseSneerRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"NoseSneerLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"MouthLowerDownRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"MouthLowerDownLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"MouthUpperRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"MouthUpperLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"MouthLowerRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"MouthLowerLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"MouthCornerPullRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"MouthCornerPullLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"MouthCornerSlantRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"MouthCornerSlantLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"MouthFrownRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"MouthFrownLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"MouthStretchRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"MouthStretchLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"MouthDimpleRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"MouthDimpleLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"MouthRaiserUpper\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"MouthRaiserLower\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"MouthPressRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"MouthPressLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"MouthTightenerRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"MouthTightenerLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"TongueOut\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"TongueUp\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"TongueDown\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"TongueRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"TongueLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"TongueRoll\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"TongueBendDown\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"TongueCurlUp\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"TongueSquish\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"TongueFlat\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"TongueTwistRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"TongueTwistLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"SoftPalateClose\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"ThroatSwallow\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"NeckFlexRight\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"NeckFlexLeft\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},{\"Name\":\"Max\",\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0}],\"GazeMutationsConfig\":{\"Name\":null,\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},\"OpennessMutationsConfig\":{\"Name\":null,\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0},\"PupilMutationsConfig\":{\"Name\":null,\"Ceil\":0.0,\"Floor\":0.0,\"SmoothnessMult\":0.0}}","AppBackgroundRequestedTheme":"\"Dark\"","OSCAddress":"\"192.168.0.115\"","OSCInPort":"9001","OSCOutPort":"9000"}
+﻿{
+  "EyeHome_EyeModel": "\"C:\\\\Users\\\\Hiatus\\\\AppData\\\\Local\\\\Temp\\\\eyeModel.onnx\"",
+  "EyeHome_FlipLeftEyeXAxis": "false",
+  "EyeHome_FlipLeftEyeYAxis": "false",
+  "EyeHome_LeftEyeRotation": "0.0",
+  "EyeHome_FlipRightEyeXAxis": "false",
+  "EyeHome_FlipRightEyeYAxis": "true",
+  "EyeHome_RightEyeRotation": "0.0",
+  "Face_CameraROI": "{\"X\":0.0,\"Y\":0.0,\"Width\":0.0,\"Height\":0.0,\"Position\":{\"X\":0.0,\"Y\":0.0},\"Size\":{\"AspectRatio\":\"NaN\",\"Width\":0.0,\"Height\":0.0},\"Right\":0.0,\"Bottom\":0.0,\"Left\":0.0,\"Top\":0.0,\"TopLeft\":{\"X\":0.0,\"Y\":0.0},\"TopRight\":{\"X\":0.0,\"Y\":0.0},\"BottomLeft\":{\"X\":0.0,\"Y\":0.0},\"BottomRight\":{\"X\":0.0,\"Y\":0.0},\"Center\":{\"X\":0.0,\"Y\":0.0}}",
+  "Face_FlipXAxis": "true",
+  "Face_FlipYAxis": "false",
+  "Face_Rotation": "0.0",
+  "EyeHome_LeftCameraROIX": "0",
+  "EyeHome_LeftCameraROIY": "0",
+  "EyeHome_LeftCameraROIWidth": "640.0",
+  "EyeHome_LeftCameraROIHeight": "480.0",
+  "EyeHome_RightCameraROIX": "285.09090909090924",
+  "EyeHome_RightCameraROIY": "131.878787878788",
+  "EyeHome_RightCameraROIWidth": "263.75757575757575",
+  "EyeHome_RightCameraROIHeight": "259.87878787878776",
+  "EyeCalibration_Algorithms": "null",
+  "OSCInPort": "9001",
+  "CheekPuffLeftLower": "0.0",
+  "EyeCalibration_OuterEyeFalloff": "0.0",
+  "EyeCalibration_EyeDominantIndex": "0",
+  "CheekPuffLeftUpper": "1.0",
+  "CheekPuffRightLower": "0.0",
+  "CheekPuffRightUpper": "1.0",
+  "CheekSuckLeftLower": "0.0",
+  "CheekSuckLeftUpper": "1.0",
+  "CheekSuckRightLower": "0.0",
+  "CheekSuckRightUpper": "1.0",
+  "JawOpenLower": "0.0",
+  "JawOpenUpper": "1.0",
+  "JawForwardLower": "0.0",
+  "JawForwardUpper": "1.0",
+  "JawLeftLower": "0.0",
+  "JawLeftUpper": "1.0",
+  "JawRightLower": "0.0",
+  "JawRightUpper": "1.0",
+  "NoseSneerLeftLower": "0.0",
+  "NoseSneerLeftUpper": "1.0",
+  "NoseSneerRightLower": "0.0",
+  "NoseSneerRightUpper": "1.0",
+  "MouthFunnelLower": "0.0",
+  "MouthFunnelUpper": "1.0",
+  "MouthPuckerLower": "0.0",
+  "MouthPuckerUpper": "1.0",
+  "MouthLeftLower": "0.0",
+  "MouthLeftUpper": "1.0",
+  "MouthRightLower": "0.0",
+  "MouthRightUpper": "1.0",
+  "MouthRollUpperLower": "0.0",
+  "MouthRollUpperUpper": "1.0",
+  "MouthRollLowerLower": "0.0",
+  "MouthRollLowerUpper": "1.0",
+  "MouthShrugUpperLower": "0.0",
+  "MouthShrugUpperUpper": "1.0",
+  "MouthShrugLowerLower": "0.0",
+  "MouthShrugLowerUpper": "1.0",
+  "MouthCloseLower": "0.0",
+  "MouthCloseUpper": "1.0",
+  "MouthSmileLeftLower": "0.0",
+  "MouthSmileLeftUpper": "1.0",
+  "MouthSmileRightLower": "0.0",
+  "MouthSmileRightUpper": "1.0",
+  "MouthFrownLeftLower": "0.0",
+  "MouthFrownLeftUpper": "1.0",
+  "MouthFrownRightLower": "0.0",
+  "MouthFrownRightUpper": "1.0",
+  "MouthDimpleLeftLower": "0.0",
+  "MouthDimpleLeftUpper": "1.0",
+  "MouthDimpleRightLower": "0.0",
+  "MouthDimpleRightUpper": "1.0",
+  "MouthUpperUpLeftLower": "0.0",
+  "MouthUpperUpLeftUpper": "1.0",
+  "MouthUpperUpRightLower": "0.0",
+  "MouthUpperUpRightUpper": "1.0",
+  "MouthLowerDownLeftLower": "0.0",
+  "MouthLowerDownLeftUpper": "1.0",
+  "MouthLowerDownRightLower": "0.0",
+  "MouthLowerDownRightUpper": "1.0",
+  "MouthPressLeftLower": "0.0",
+  "MouthPressLeftUpper": "1.0",
+  "MouthPressRightLower": "0.0",
+  "MouthPressRightUpper": "1.0",
+  "MouthStretchLeftLower": "0.0",
+  "MouthStretchLeftUpper": "1.0",
+  "MouthStretchRightLower": "0.0",
+  "MouthStretchRightUpper": "1.0",
+  "TongueOutLower": "0.0",
+  "TongueOutUpper": "1.0",
+  "TongueUpLower": "0.0",
+  "TongueUpUpper": "1.0",
+  "TongueDownLower": "0.0",
+  "TongueDownUpper": "1.0",
+  "TongueLeftLower": "0.0",
+  "TongueLeftUpper": "1.0",
+  "TongueRightLower": "0.0",
+  "TongueRightUpper": "1.0",
+  "TongueRollLower": "0.0",
+  "TongueRollUpper": "1.0",
+  "TongueBendDownLower": "0.0",
+  "TongueBendDownUpper": "1.0",
+  "TongueCurlUpLower": "0.0",
+  "TongueCurlUpUpper": "1.0",
+  "TongueSquishLower": "0.0",
+  "TongueSquishUpper": "1.0",
+  "TongueFlatLower": "0.0",
+  "TongueFlatUpper": "1.0",
+  "TongueTwistLeftLower": "0.0",
+  "TongueTwistLeftUpper": "1.0",
+  "TongueTwistRightLower": "0.0",
+  "TongueTwistRightUpper": "1.0",
+  "AppBackgroundRequestedTheme": "\"Light\"",
+  "AppBackgroundRequestedLanguage": "\"DefaultLanguage\"",
+  "AppSettings_RecalibrateAddress": "\"/avatar/parameters/etvr_recenter\"",
+  "AppSettings_OneEuroMinFreqCutoff": "1.0",
+  "AppSettings_OneEuroSpeedCutoff": "0.007",
+  "AppSettings_UseGPU": "true",
+  "AppSettings_CheckForUpdates": "true",
+  "EyeCalibration_EyeDifferenceThreshold": "0",
+  "EyeCalibration_BlinkDetectionAlgorithmIndex": "0",
+  "EyeCalibration_LEAPCalibrationSamples": "2000.0",
+  "EyeCalibration_IBOFilterSampleSize": "400.0",
+  "EyeCalibration_CalibrationSamples": "600.0",
+  "EyeCalibration_IBOCloseThreshold": "0.3",
+  "EyeCalibration_EclipseBasedDilation?": "false",
+  "EyeCalibration_SkipAutoRadius": "false",
+  "EyeCalibration_LeftHSFRadius": "10.0",
+  "EyeCalibration_RightHSFRadius": "10.0",
+  "EyeCalibration_RansacThreshAdd": "11.0",
+  "EyeCalibration_BlobThreshold": "65.0",
+  "EyeCalibration_MinBlobSize": "10.0",
+  "EyeCalibration_MaxBlobSize": "25.0",
+  "EyeCalibration_RightEyeThresh": "80.0",
+  "EyeCalibration_LeftEyeThresh": "80.0",
+  "EyeCalibration_EmulateEyeWiden": "false",
+  "EyeCalibration_EyeWidenLower": "0.0",
+  "EyeCalibration_EyeWidenUpper": "1.0",
+  "EyeCalibration_EmulateEyeSquint": "false",
+  "EyeCalibration_EyeSquintLower": "0.0",
+  "EyeCalibration_EyeSquintUpper": "1.0",
+  "EyeCalibration_EmulateEyebrows": "false",
+  "EyeCalibration_EyebrowsLower": "0.0",
+  "EyeCalibration_EyebrowsRaise": "1.0",
+  "ShowOnboardingOnStartup": "false",
+  "Face_CameraROIX": "364.60606060606074",
+  "Face_CameraROIY": "71.75757575757586",
+  "Face_CameraROIWidth": "242.42424242424227",
+  "Face_CameraROIHeight": "242.42424242424238",
+  "OSCOutPort": "9000",
+  "OSCAddress": "\"127.0.0.1\"",
+  "EyeHome_LeftCameraIndex": "\"0\"",
+  "EyeHome_LeftCameraDisplayedIndex": "\"HD Pro Webcam C920\"",
+  "EyeHome_RightCameraIndex": "\"\"",
+  "EyeHome_RightCameraDisplayedIndex": "\"\"",
+  "EyeHome_FaceCameraIndex": "\"\"",
+  "EyeHome_FaceCameraDisplayedIndex": "\"\""
+}
