feat(Refactor) Several major changes
- Replace fti_osc with OscCore
--- This was to handle a strange case where many instances of fti_osc running (IE VRCFC and Baballonia) would generate corrupted packets
--- Android support woo
- Omit OpenCVSharp cameras from DeviceEnumerator
--- Instead use a more windows-specific impl.
- Fix a typo where serial devices wouldn't be detected on Linux (dev/ttyacm vs /dev/ttyacm)
- Tweak one-euro values
- Add VRCFT module to project

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/HyperText.Avalonia"]
 	path = src/HyperText.Avalonia
 	url = https://github.com/Project-Babble/HyperText.Avalonia
+[submodule "src/VRCFaceTracking"]
+	path = src/VRCFaceTracking
+	url = https://github.com/Project-Babble/VRCFaceTracking.git
