--- a/src/Baballonia.Android/Baballonia.Android.csproj
+++ b/src/Baballonia.Android/Baballonia.Android.csproj
@@ -2,7 +2,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net8.0-android</TargetFramework>
-        <SupportedOSPlatformVersion>21</SupportedOSPlatformVersion>
+        <SupportedOSPlatformVersion>24</SupportedOSPlatformVersion>
         <ApplicationId>com.MammaMiaDev.AvaloniaMiaDev</ApplicationId>
         <ApplicationVersion>1</ApplicationVersion>
         <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
@@ -18,12 +18,13 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Avalonia.Android" Version="$(AvaloniaVersion)"/>
+        <PackageReference Include="Avalonia.Android" Version="11.2.8" />
+        <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.21.0" />
         <PackageReference Include="Sdcb.OpenCvSharp4.mini.runtime.android-arm64" Version="4.8.0.20230708" />
-        <PackageReference Include="Xamarin.AndroidX.Core.SplashScreen" Version="1.0.1.1"/>
+        <PackageReference Include="Xamarin.AndroidX.Core.SplashScreen" Version="1.0.1.14" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\AvaloniaMiaDev\AvaloniaMiaDev.csproj"/>
+        <ProjectReference Include="..\Baballonia\Baballonia.csproj" />
     </ItemGroup>
 </Project>
