--- a/src/Baballonia.iOS/Baballonia.iOS.csproj
+++ b/src/Baballonia.iOS/Baballonia.iOS.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net8.0-ios</TargetFramework>
@@ -12,6 +12,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\AvaloniaMiaDev\AvaloniaMiaDev.csproj" />
+      <ProjectReference Include="..\Baballonia\Baballonia.csproj" />
     </ItemGroup>
 </Project>
