--- a/src/Baballonia/Baballonia.csproj
+++ b/src/Baballonia/Baballonia.csproj
@@ -71,7 +71,6 @@
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.2.8" />
         <PackageReference Include="Avalonia.Xaml.Interactions.Draggable" Version="11.3.0" />
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
-        <PackageReference Include="ESPTool" Version="3.0.2" />
         <PackageReference Include="Jeek.Avalonia.Localization" Version="1.3.1" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.5" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.5" />
@@ -111,6 +110,10 @@
     <ItemGroup>
       <Compile Update="Views\EyeCalibrationView.axaml.cs">
         <DependentUpon>TrackingSettingsPageView.axaml</DependentUpon>
+        <SubType>Code</SubType>
+      </Compile>
+      <Compile Update="Views\FirmwareView.axaml.cs">
+        <DependentUpon>FirmwareView.axaml</DependentUpon>
         <SubType>Code</SubType>
       </Compile>
     </ItemGroup>
